fix: home page for windows alignment issue fixed

--- a/src/app/component/timeline/timeline.component.scss
+++ b/src/app/component/timeline/timeline.component.scss
@@ -1,4 +1,3 @@
 .gallery {
   max-width: 75vw;
-  max-height: 75vh;
 }
