--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ body {
 }
 
 .base-fs-windows {
-  //font-size: 13px !important; /* Adjust as needed for Windows */
+  font-size: 15px !important; /* Adjust as needed for Windows */
 }
 
 .gradient-text {
